# MIDAS

./: .gitignore  README.md
0midas_assistant/: Midas_Assistant_cli.py  Midas_Assistant_streamlit.py  Midas_Assitant_flask.py  base.html  example.env  requirements.txt
0midas_hub/: base.html
1midas_architech/: definicion_agentes.py  example.env  pydantic_ai_expert.py  requirements.txt  streamlit_ui.py
2midas_dataset/: agents_dataset.py  app.py  example.env  requirements.txt
2midas_plot/: 2gemini.py  r1_plot.py
2midas_plot/plot_v1/: README.md  example.env  flow.py  flow_gui.py  pyproject.toml
2midas_plot/plot_v1/src/plot_v1/: crew.py  main.py
2midas_plot/plot_v1/src/plot_v1/config/: agents.yaml  tasks.yaml
3midas_plot/: README.md  example.env  flow.py  flow_gui.py  requirements.txt
3midas_plot/Versiones_Antiguas/plot_v0/: README.md  pyproject.toml
3midas_plot/Versiones_Antiguas/plot_v0/src/plot_v0/: crew.py
3midas_plot/Versiones_Antiguas/plot_v0/src/plot_v0/config/: agents.yaml
3midas_touch/: gemini-touch.py  gemini-touch2.py
4midas_test/: agents_test.py
4midas_touch/: Midas_Touch_Streamlit.py  Midas_Touch_Streamlit_V2_5.py  Midas_Touch_V2_5_CLI.py  Midas_Touch_V2_CLI.py  example.env  readme.md  requirements.txt
5midas_deploy/: agents_deploy.py  model.joblib
5midas_test/: agents_test.py  app.py  requirements.txt
6midas_deploy/: agents_deploy.py  app.py  code_joblib.py  requirements.txt
7midas_help/: README.py  app.py  app2.py  example.env  info_midas.md  requirements.txt
Extra/: ejemplo_charla.py  ejemplo_charla_simplificado.py  (+8 more)
(+85 files in other folders)
