[project]
name = "plot_v1"
version = "0.1.0"
description = "plot_v1 using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.98.0,<1.0.0"
]

[project.scripts]
plot_v1 = "plot_v1.main:run"
run_crew = "plot_v1.main:run"
train = "plot_v1.main:train"
replay = "plot_v1.main:replay"
test = "plot_v1.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
