[project]
name = "plot_v0"
version = "0.1.0"
description = "plot_v0 using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.98.0,<1.0.0"
]

[project.scripts]
plot_v0 = "plot_v0.main:run"
run_crew = "plot_v0.main:run"
train = "plot_v0.main:train"
replay = "plot_v0.main:replay"
test = "plot_v0.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
